--- a/pages/english/style.css
+++ b/pages/english/style.css
@@ -45,6 +45,7 @@
     font-family: 'Bebas Neue', cursive;
     font-size: 25px;
     box-shadow: var(--ombraD);
+    color: white;
     transition: all 0.2s ease-in-out;
 
 }
@@ -64,9 +65,10 @@
 #translatedtext {
     font-size: 35px;
     font-family: 'Raleway', sans-serif;
-    left:730px;
-    bottom: 520px;
+    left:850px;
     display: block;
+    top:210px;
+    position: absolute;
     word-wrap: break-word;
 }
 #hr {
@@ -75,4 +77,27 @@
     height: 5px;
     background-color: black;
     position: absolute;
+}
+#copy {
+    background-color: rgb(0, 255, 115);
+    width: 110px;
+    height: 30px;
+    position: absolute;
+    right:730px;
+    margin-top: 30px;
+    border-radius: 9px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: white;
+    font-family: 'Bebas Neue', cursive;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+#copy:hover {
+    transform: scale(1.11);
+}
+#copy:active {
+    transform: scale(0.99);
 }
