--- a/pages/english/style.css
+++ b/pages/english/style.css
@@ -162,9 +162,45 @@ a:visited {
         position: relative;
     }
     #input {
-        width: 300px;
+        width: 350px;
+        height: 250px;
     }
-    body {
-        width: 414px;
-    } 
+    #head {
+        width: 100%;
+        height:70px;
+    }
+    #translate {
+        left:110px;
+        top: 420px;
+        border-radius: 13px;
+        width: 190px;
+        height: 50px;
+        position: absolute;
+    }
+    #wiki {
+        position: relative;
+        top:630px
+
+    }
+    #translated {
+        left: 0px;
+        font-size: 33px;
+        top:460px;
+        width: 30vh;
+    }
+    #translatedtext {
+        left: 20px;
+        top:520px;
+        width: 42vh;
+    }
+    #copy {
+        top:460px;
+        right:20px;
+    }
+    #cr {
+        font-size: 12px;
+    }
+    #hr {
+        top:760px;
+    }
 }
