--- a/pages/english/style.css
+++ b/pages/english/style.css
@@ -17,6 +17,19 @@ body {
     position: absolute;
     z-index: -1;
 }
+#menu {
+    display: flex;
+    align-items: center;
+    right: 90px;
+    top:40px;
+    position: absolute;
+}
+.menuT {
+    font-family: 'Raleway', sans-serif;
+    font-size: 40px;
+    color: black;
+    cursor: pointer;
+}
 #logo {
     top:0px;
     z-index: 1;
@@ -59,9 +72,6 @@ body {
     margin:20px;
     position: absolute;
 }
-#translate:hover {
-    transform: scale(1.11);
-}
 #translate:active {
     transform: scale(0.99);
 }
@@ -98,9 +108,6 @@ body {
     font-family: 'Bebas Neue', cursive;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
-}
-#copy:hover {
-    transform: scale(1.11);
 }
 #copy:active {
     transform: scale(0.99);
@@ -161,6 +168,9 @@ a:visited {
         width: 300px;
         position: relative;
     }
+    body {
+        height: 700px;
+    }
     #input {
         width: 350px;
         height: 250px;
@@ -192,15 +202,21 @@ a:visited {
         left: 20px;
         top:520px;
         width: 42vh;
+        font-size: 25px;
     }
     #copy {
         top:460px;
         right:20px;
     }
     #cr {
-        font-size: 12px;
+        font-size: 17px;
+        margin: 7px;
     }
     #hr {
         top:760px;
+    }
+    #make {
+        font-size: 17px;
+        margin: 7px;
     }
 }
