--- a/pages/italian/style.css
+++ b/pages/italian/style.css
@@ -17,19 +17,7 @@ body {
     position: absolute;
     z-index: -1;
 }
-#menu {
-    display: flex;
-    align-items: center;
-    right: 90px;
-    top:40px;
-    position: absolute;
-}
-.menuT {
-    font-family: 'Raleway', sans-serif;
-    font-size: 40px;
-    color: black;
-    cursor: pointer;
-}
+
 #logo {
     top:0px;
     z-index: 1;
@@ -196,6 +184,64 @@ a:visited {
         left: 0px;
         font-size: 33px;
         top:460px;
+        width: 30vh;
+    }
+    #translatedtext {
+        left: 20px;
+        top:520px;
+        width: 42vh;
+        font-size: 25px;
+    }
+    #copy {
+        top:460px;
+        right:20px;
+    }
+    #cr {
+        font-size: 17px;
+        margin: 7px;
+    }
+    #hr {
+        top:760px;
+    }
+    #make {
+        font-size: 17px;
+        margin: 7px;
+    }
+}
+@media screen and (max-width: 360px) {
+    #logo {
+        top:20px;
+        width: 300px;
+        position: relative;
+    }
+    body {
+        height: 700px;
+    }
+    #input {
+        width: 300px;
+        height: 250px;
+    }
+    #head {
+        width: 100%;
+        height:70px;
+    }
+    #translate {
+        left:87px;
+        top: 420px;
+        border-radius: 13px;
+        width: 190px;
+        height: 50px;
+        position: absolute;
+    }
+    #wiki {
+        position: relative;
+        top:630px
+
+    }
+    #translated {
+        left: 0px;
+        font-size: 25px;
+        top:465px;
         width: 30vh;
     }
     #translatedtext {
